# base-django-config

./: .editorconfig  .flake8  Dockerfile  Makefile  README.md  README.rst  docker-compose.yaml  pyproject.toml
core/core/utils/: cryptography.py  misc.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/project/settings/templates/: settings.dev.py
scripts/: entrypoint.sh  production_data.py
